[metadata]
name = siwi
version = 0.3.2
author = Wey Gu
author_email = weyl.gu@gmail.com
description = A PoC of Dialog System With Graph Database Backed Knowledge Graph.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wey-gu/nebula-siwi
project_urls =
    Bug Tracker = https://github.com/wey-gu/nebula-siwi/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    nebula3-python
    pyahocorasick
    pyyaml
    flask
    gunicorn

[options.packages.find]
where = src